--- a/.github/workflows/cmake_ctest.yml
+++ b/.github/workflows/cmake_ctest.yml
@@ -99,11 +99,7 @@ jobs:
         cd packaging && appdmg dmg.json ${{ env.PRODUCT_NAME}}.dmg
 
     - name: Zip
-      if: ${{ matrix.name == 'Linux' }}
-      working-directory: ${{ env.ARTIFACTS_PATH }}
-      run: 7z a -tzip ${{ env.PRODUCT_NAME }}.zip .
-
-      if: ${{ matrix.name == 'Windows' }}
+      if: ${{ matrix.name != 'macOS' }}
       working-directory: ${{ env.ARTIFACTS_PATH }}
       run: 7z a -tzip ${{ env.PRODUCT_NAME }}.zip .
 
