--- a/.github/workflows/cmake_ctest.yml
+++ b/.github/workflows/cmake_ctest.yml
@@ -31,9 +31,9 @@ jobs:
           - name: Linux
             os: ubuntu-22.04
             pluginval-binary: ./pluginval
-          #- name: macOS
-          #  os: macos-12
-          #  pluginval-binary: pluginval.app/Contents/MacOS/pluginval
+          - name: macOS
+            os: macos-12
+            pluginval-binary: pluginval.app/Contents/MacOS/pluginval
           - name: Windows
             os: windows-latest
             pluginval-binary: ./pluginval.exe
