--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ set_target_properties("${PROJECT_NAME}" PROPERTIES FOLDER "")
 
 # Required for Linux happiness:
 # See https://forum.juce.com/t/loading-pytorch-model-using-binarydata/39997/2
-set_target_properties(Assets PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
+#set_target_properties(Assets PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 # Folder
 foreach(target ${FORMATS} "All")
@@ -75,7 +75,7 @@ foreach(target ${FORMATS} "All")
             XCODE_GENERATE_SCHEME ON)
     endif()
 endforeach()
-set_target_properties(Assets PROPERTIES FOLDER "Targets")
+#set_target_properties(Assets PROPERTIES FOLDER "Targets")
 
 # We'll need to link to these from our plugin as well as our tests
 set(JUCE_DEPENDENCIES
@@ -94,7 +94,7 @@ target_include_directories("${PROJECT_NAME}"
 
 target_link_libraries("${PROJECT_NAME}"
     PRIVATE
-    Assets
+    #Assets
     ${JUCE_DEPENDENCIES}
     PUBLIC
     juce::juce_recommended_config_flags
