--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
-set(PROJECT_NAME "Pamplejuce")
+set(PROJECT_NAME "AudioPluginExample")
 set(FORMATS AU VST3 AUv3 Standalone)
 file(STRINGS VERSION CURRENT_VERSION)
 project(${PROJECT_NAME} VERSION ${CURRENT_VERSION})
